navbar correction overflow on body

--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -1,3 +1,8 @@
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .container {
   width: 100%;
   margin: auto;
