--- a/src/typography.scss
+++ b/src/typography.scss
@@ -1,4 +1,4 @@
-html body {
+html, body {
   font-size: $typography-base-size;
   font-family: $typography-base-font;
   line-height: 1.5;
